# obstacle_detection_pkg

./: CMakeLists.txt  README.md  package.xml
config/: obstacle_detection_params.yaml
include/obstacle_detection_pkg/: obstacle_detector.hpp  utils.hpp
launch/: obstacle_detection.launch.py
msg/: Obstacle.msg  ObstacleArray.msg
src/: obstacle_detector.cpp  obstacle_detector_node.cpp  obstacle_detector_old.cpp  utils.cpp
